--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
           <p><video src="resources/videos/excursion.mp4" autoplay muted loop></video></p>
           <p><h2>Your personal travel guide</h2></p>
           <p id="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
-          <img src="resources/images/camp.jpg" />
-          <img src="resources/images/phone.png" />
+          <p><img src="resources/images/camp.jpg" /> </p>
+          <p<img src="resources/images/phone.png" /></p>
           <p><h2>Coming Soon for iPhone and Android</h2></p>
           <p><a href="https://www.google.com/maps">Download Excursion (Coming soon!)</a></p>
           <p id="copyright">&copy; Excursion</p>
