Remove p tags around headers

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
           <title>Excursion</title>
      </head>
      <body>
-          <p><h1>Discover hidden places in the world around you</h1></p>
+          <h1>Discover hidden places in the world around you</h1>
           <p><a href="https://www.google.com/maps">Download Excursion (Coming soon!)</a></p>
-          <p><video src="resources/videos/excursion.mp4" autoplay muted loop></video></p>
-          <p><h2>Your personal travel guide</h2></p>
+          <video src="resources/videos/excursion.mp4" autoplay muted loop></video>
+          <h2>Your personal travel guide</h2>
           <p id="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
-          <p><img src="resources/images/camp.jpg" /> </p>
-          <p<img src="resources/images/phone.png" /></p>
-          <p><h2>Coming Soon for iPhone and Android</h2></p>
+          <p><img src="resources/images/camp.jpg"></p>
+          <p<img src="resources/images/phone.png"></p>
+          <h2>Coming Soon for iPhone and Android</h2>
           <p><a href="https://www.google.com/maps">Download Excursion (Coming soon!)</a></p>
           <p id="copyright">&copy; Excursion</p>
      </body>
